src/test/resources/Parser/SyntaxErrors/TwiceDefinedLocalVariableFor.front
class A:
    test() {
        i:int32 = 0;
        arr := [int32, 10];
        for i : arr {}
    }